pos 데이터 플랫폼 주석

--- a/customer.html
+++ b/customer.html
@@ -79,7 +79,7 @@
                 </div>
               </div>
             </div>
-            <div class="guide mb-4 p-3 pb-4 border-bottom">
+            <!-- <div class="guide mb-4 p-3 pb-4 border-bottom">
               <h2 class="mb-2 text-black">POS 데이터플랫폼</h2>
               <div class="mt-1 row">
                 <div class="col-lg-10 col-md-9 col-sm-12">
@@ -91,7 +91,7 @@
                   </a>
                 </div>
               </div>
-            </div>
+            </div> -->
             <div class="guide mb-4 p-3 pb-4 border-bottom">
               <h2 class="mb-2 text-black">NICE MARKET INFO</h2>
               <div class="mt-1 row">
